--- a/bst-project/package.json
+++ b/bst-project/package.json
@@ -1,22 +1,20 @@
 {
   "name": "bst-project",
   "version": "1.0.0",
-  "description": "A simple implementation of a Binary Search Tree (BST) in TypeScript.",
+  "description": "A project implementing a Binary Search Tree.",
   "main": "src/bst.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/bst.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "start": "node dist/bst.js"
   },
-  "keywords": [
-    "binary-search-tree",
-    "bst",
-    "typescript"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "typescript": "^4.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/bst-project.git"
+  },
+  "author": "Your Name",
+  "license": "MIT"
 }
